@@ -4,6 +4,7 @@
 
 # bedrock-create-site: copy and create artifacts needed for a Bedrock project
 
+# ----------------------------------------------------------------------
 # Copyright (C) 2008 Signature Information Solutions, LLC
 #
 # This program is free software; you can redistribute it and/or modify
@@ -19,11 +20,11 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+# ----------------------------------------------------------------------
 
 # This is a command line program to create the initial scaffolding for a
-# Bedrock project. It's purpose is to automate the handful of necessary (but
-# simple) steps; it also provides support for some optional (but common)
-# setup steps (such as creating MySQL databases).
+# Bedrock project. It's purpose is to automate the handful of steps
+# necessary to set up a web site project that uses Bedrock.
 #
 # See bedrock-create-site(1) for full documentation. You can run perldoc on
 # this file to view the POD used to create the man page.
