@@ -1,3 +1,7 @@
+2008-03-05  Alan D. Salewski  <ASalewski@signatureinfo.com>
+
+	* src/main/perl/bin/bedrock-create-site.in: Doc fix
+
 2008-03-04  Alan D. Salewski  <ASalewski@signatureinfo.com>
 
 	* src/main/perl/bin/bedrock-create-site.in
